--- a/trunk/Languages/default-en.xml
+++ b/trunk/Languages/default-en.xml
@@ -16,7 +16,7 @@
 		description="Shareaza Default English Skin File"
 		link="http://www.shareaza.com/"
 		email="contact@shareaza.com"
-		version="2.1.0.42"
+		version="2.1.0.58"
 		type="Language"
 		language="en"
 		prompt="Click here to select English as your natural language."
@@ -95,11 +95,11 @@
 		<button id="ID_SEARCH_FILTER_RAW" text="More..."/>
 	</toolbar>
 	<toolbar name="CSearchWnd.Full">
+		<button id="ID_SEARCH_SEARCH" text="Search Again..."/>
+		<button id="ID_SEARCH_STOP" text="Stop Search "/>
+		<separator/>
 		<button id="ID_SEARCH_DOWNLOAD" text="Download"/>
 		<button id="ID_BROWSE_LAUNCH" text="Browse User"/>
-		<separator/>
-		<button id="ID_SEARCH_SEARCH" text="Search Again..."/>
-		<button id="ID_SEARCH_STOP" text="Stop"/>
 		<separator/>
 		<button id="ID_SEARCH_PANEL" text="Show Search"/>
 		<button id="ID_SEARCH_DETAILS" text="Show Details"/>
@@ -429,12 +429,13 @@
 			<item id="ID_TAB_SEARCH" text="_Search"/>
 			<item id="ID_TAB_TRANSFERS" text="_Downloads"/>
 			<separator/>
-			<item id="ID_VIEW_SECURITY" text="Se_curity"/>
-			<item id="ID_VIEW_HOSTS" text="H_ost Cache"/>
-			<separator/>
 			<menu text="_Advanced">
 				<item id="ID_VIEW_NEIGHBOURS" text="_Neighbours"/>
 				<item id="ID_VIEW_UPLOADS" text="_Uploads"/>
+				<separator/>
+				<item id="ID_VIEW_SECURITY" text="Se_curity"/>
+				<item id="ID_VIEW_HOSTS" text="H_ost Cache"/>
+				<item id="ID_VIEW_DISCOVERY" text="Disco_very"/>
 			</menu>
 			<separator/>
 			<item id="ID_VIEW_BASIC" text="_Normal Mode"/>
@@ -899,15 +900,15 @@
 		<item id="ID_DOWNLOADS_CLEAR_INCOMPLETE" text="_Cancel"/>
 		<separator/>
 		<item id="ID_DOWNLOADS_SOURCES" text="_Find More Sources"/>
-		<separator/>
+		<!-- <separator/>
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETED" text="C_lear Completed"/>
-		<item id="ID_DOWNLOADS_AUTO_CLEAR" text="A_uto Clear"/>
+		<item id="ID_DOWNLOADS_AUTO_CLEAR" text="A_uto Clear"/> -->
 		<separator/>
 		<item id="ID_DOWNLOADS_HELP" text="_Help..."/>
 	</menu>
 	<menu name="CDownloadsWnd.Download">
 		<item id="ID_DOWNLOADS_LAUNCH" text="_Preview"/>
-		<item id="ID_DOWNLOADS_LAUNCH_COPY" text="Pre_view Copy"/>
+		<!-- <item id="ID_DOWNLOADS_LAUNCH_COPY" text="Pre_view Copy"/> -->
 		<item id="ID_DOWNLOADS_ENQUEUE" text="Add to Pla_ylist"/>
 		<separator/>
 		<item id="ID_DOWNLOADS_RESUME" text="_Resume"/>
@@ -930,9 +931,9 @@
 			<item id="ID_DOWNLOADS_MOVE_DOWN" text="Move _Down"/>
 			<item id="ID_DOWNLOADS_BOOST" text="_Ignore Bandwidth Limit"/>
 		</menu>
-		<item id="ID_DOWNLOADS_CLEAR_COMPLETED" text="C_lear Completed"/>
+		<!-- <item id="ID_DOWNLOADS_CLEAR_COMPLETED" text="C_lear Completed"/>
 		<item id="ID_DOWNLOADS_AUTO_CLEAR" text="A_uto Clear"/>
-		<separator/>
+		<separator/> -->
 		<item id="ID_DOWNLOADS_HELP" text="_Help..."/>
 	</menu>
 	<menu name="CDownloadsWnd.Source">
@@ -950,9 +951,9 @@
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Clear"/>
 		<separator/>
 		<item id="ID_DOWNLOADS_FILE_DELETE" text="_Delete File"/>
-		<separator/>
+		<!-- <separator/>
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETED" text="C_lear Completed"/>
-		<item id="ID_DOWNLOADS_AUTO_CLEAR" text="A_uto Clear"/>
+		<item id="ID_DOWNLOADS_AUTO_CLEAR" text="A_uto Clear"/> -->
 	</menu>
 	<menu name="CDownloadsWnd.Completed">
 		<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Open or Play"/>
@@ -963,9 +964,9 @@
 		<separator/>
 		<item id="ID_DOWNLOADS_FILE_DELETE" text="_Delete File"/>
 		<item id="ID_DOWNLOADS_RATE" text="_Rate File..."/>
-		<separator/>
+		<!-- <separator/>
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETED" text="C_lear Completed"/>
-		<item id="ID_DOWNLOADS_AUTO_CLEAR" text="Aut_o Clear"/>
+		<item id="ID_DOWNLOADS_AUTO_CLEAR" text="Aut_o Clear"/> -->
 	</menu>
 	<menu name="CDownloadTabBar">
 		<item id="ID_DOWNLOAD_GROUP_RESUME" text="_Resume All"/>
@@ -994,9 +995,9 @@
 	<menu name="CUploadsWnd.Basic">
 		<item id="ID_BROWSE_LAUNCH" text="_Browse User"/>
 		<item id="ID_UPLOADS_CHAT" text="_Chat to User"/>
-		<separator/>
+		<!-- <separator/>
 		<item id="ID_UPLOADS_CLEAR_COMPLETED" text="C_lear Completed"/>
-		<item id="ID_UPLOADS_AUTO_CLEAR" text="A_uto Clear"/>
+		<item id="ID_UPLOADS_AUTO_CLEAR" text="A_uto Clear"/> -->
 	</menu>
 	<menu name="CUploadsWnd">
 		<item id="ID_UPLOADS_START" text="_Start Now"/>
@@ -1005,9 +1006,9 @@
 		<item id="ID_BROWSE_LAUNCH" text="_Browse User"/>
 		<item id="ID_UPLOADS_CHAT" text="_Chat to User"/>
 		<item id="ID_SECURITY_BAN" text="B_an User"/>
-		<separator/>
+		<!-- <separator/>
 		<item id="ID_UPLOADS_CLEAR_COMPLETED" text="C_lear Completed"/>
-		<item id="ID_UPLOADS_AUTO_CLEAR" text="A_uto Clear"/>
+		<item id="ID_UPLOADS_AUTO_CLEAR" text="A_uto Clear"/> -->
 	</menu>
 	<menu name="CUploadsWnd.Filter">
 		<item id="ID_UPLOADS_FILTER_ALL" text="Show All"/>
@@ -1988,7 +1989,7 @@
 		<newline gap="8"/>
 		<text>Shareaza has limited network connections and set appropriate default values to
 		ensure proper operation, however performance may be reduced. Please visit the Shareaza
-		forums for further imformation, and up to date news.</text>
+		forums for further information, and up to date news.</text>
 	</document>
 
 	<document name="GeneralHelp.AdultFilter">
@@ -2010,9 +2011,8 @@
 		(file type). Furthermore, searches must not be limited to numbers or negative
 		terms only, and you should avoid overly general queries.</text>
 		<newline gap="8"/>
-		<text>Most clients on the network will ignore a search for
-		all MP3 files, for example, because it is not specific enough and would generate
-		too many results.</text>
+		<text>Most clients on the network will ignore a search for all MP3 files, for example, 
+		because it is not specific enough and would generate too many results.</text>
 	</document>
 
 	<document name="SearchHelp.AdultSearch">
@@ -2499,6 +2499,12 @@
 	<string id="8328" value="Total Volume:"/>
 	<string id="8329" value="of your library"/>
 	<string id="8330" value="Folder"/>
+	<string id="8331" value="This source is currently busy"/>
+	<string id="8332" value="This source is firewalled"/>
+	<string id="8333" value="This source may be unstable"/>
+	<string id="8334" value="Sources for this file are currently busy"/>
+	<string id="8335" value="Sources for this file are firewalled"/>
+	<string id="8336" value="Sources for this file may be unstable"/>
 	<string id="16064" value="Starting Shareaza network core..."/>
 	<string id="16065" value="Can't bind to %s port %i for incoming connections.  Incoming connections will not be supported."/>
 	<string id="16066" value="Shutting down Shareaza network core..."/>
@@ -2689,6 +2695,7 @@
 	<string id="16374" value="New Queue"/>
 	<string id="16375" value="Partial"/>
 	<string id="16376" value="Complete Files"/>
+	<string id="16377" value="HTTP Guard"/>
 	<string id="16384" value="Are you sure you want to launch the file &quot;%s&quot; ?\n\nSome files can be harmful to your computer.  Ensure you know what the file is before launching it."/>
 	<string id="16385" value="You are about to modify the metadata of %i files, are you sure you want to continue?"/>
 	<string id="16386" value="Editing metadata of %i files."/>
@@ -2997,7 +3004,7 @@
 
 	<dialog name="CGeneralSettingsGroup" cookie="" caption="General"/>
 
-	<dialog name="CGeneralSettingsPage" cookie="BuBuBuBuBuBuBuBuStCoBuSyStEdmsStmsBuStCoStCoBuBu" caption="General">
+	<dialog name="CGeneralSettingsPage" cookie="BuBuBuBuBuBuBuBuStCoBuSyStEdmsStmsBuStCoStCoBuBuBuBu" caption="General">
 		<control caption="_User Interface:"/>
 		<control caption="Auto-connect on Shareaza startup"/>
 		<control caption="Start Shareaza at Windows startup"/>
@@ -3021,13 +3028,15 @@
 		<control caption="Normal|Minimise to Tray"/>
 		<control caption="Hide side bar when starting search"/>
 		<control caption="Filter adult content from searches"/>
+		<control caption="Auto-clean downloads window"/>
+		<control caption="Auto-clean uploads window"/>
 	</dialog>
 
 	<dialog name="CLibrarySettingsPage" cookie="BuBuBuBuBuBuBuBuStEdmsStStEdmsStBuBuCoBuBuBuCoBuBuBuEdBu" caption="Library">
 		<control caption="_Options:"/>
 		<control caption="Remember folder views"/>
 		<control caption="Watch library folders"/>
-		<control/>
+		<control caption="Quick hashing (Uses more CPU)"/>
 		<control caption="Filter objects by extension"/>
 		<control/>
 		<control caption="Allow others to browse shares"/>
@@ -3947,7 +3956,7 @@
 		<control/>
 	</dialog>
 
-	<dialog name="CTorrentTrackerDlg" cookie="BuStEdStEdBuStEdStEdBuSyBuCoBu" caption="BitTorrent Tracker Viewer">
+	<dialog name="CTorrentTrackerDlg" cookie="BuStEdStEdBuStEdStEdBuSyBuCoBuCoStBu" caption="BitTorrent Advanced Information">
 		<control caption="Torrent _Information:"/>
 		<control caption="Name:"/>
 		<control/>
@@ -3963,6 +3972,9 @@
 		<control caption="_Refresh"/>
 		<control/>
 		<control caption="Close"/>
+		<control caption="As needed|When ratio over 100%|Never"/>
+		<control caption="Start new download transfers:"/>
+		<control caption="Transfers:"/>
 	</dialog>
 
 	<dialog name="CDownloadGroupDlg" cookie="BuEdSyBuCoBuBuBuBuBuEdBu" caption="Download Group Properties">
